# pdf-translate

./: .dockerignore  .gitignore  Dockerfile  README.md  error.md  pyproject.toml  requirements.txt
configs/: config.yaml
docs/: design_doc.md
scripts/: translate_api.py
src/pdf_translate/: __init__.py  cache.py  cli.py  config.py  ocr.py  pipeline_a.py  pipeline_b.py  translation.py  utils.py
